--- a/play/play.html
+++ b/play/play.html
@@ -1,6 +1,4 @@
 
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -27,8 +25,10 @@
     <img src="tanks/enemytank1.png" id="enemyTank">
     <img id="bulletFlame" src="fire.png" >  
     <img id="EnmenyBulletFlame" src="fire.png" >  
-    <div id="bullet"></div>
+    <div class="bullet" id="playerBullet"></div>
+    <div class="bullet" id="enemyBullet"></div>
    <script src="play.js"></script> 
+   <script src="enemyplay.js"></script> 
 </div>
 <img id="begImg" >  
 </body>
