--- a/play.html
+++ b/play.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="play.css">
+    <link rel="stylesheet" href="css/play.css">
     <title>level-1</title>
 </head>
 <body>
@@ -22,8 +22,8 @@
     </div>
     <img src="tanks/tank1.png" id="myCharacter">
     <img src="tanks/enemytank1.png" id="enemyTank">
-    <img id="bulletFlame" src="fire.png" >  
-    <img id="EnmenyBulletFlame" src="fire.png" > 
+    <img id="bulletFlame" src="../fire.png" >  
+    <img id="EnmenyBulletFlame" src="../fire.png" > 
    <div  id="bullet"></div>  
    <script src="play.js"></script> 
 </div>
