The first integration version is with 1 HTML file including all the styleSheets and Javascripts

--- a/Integrated version1/html/play.html
+++ b/Integrated version1/html/play.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="play.css">
+    <!-- <link rel="stylesheet" href="../css/play.css"> -->
+    <link rel="stylesheet" type="text/css" media="screen" href="../css/play.css" />
     <title>level-1</title>
 </head>
 <body>
@@ -21,15 +22,19 @@
         <div  class="Bars" id="enemyhealthBG"></div>
         <div  class="Bars" id="enemyhealthBar"></div>
     </div>
-    <img src="tanks/tank1.png" id="myCharacter">
-    <img src="tanks/enemytank1.png" id="enemyTank">
-    <img id="bulletFlame" src="fire.png" >  
-    <img id="EnmenyBulletFlame" src="fire.png" >  
+    <img src="../images/tank1.png" id="myCharacter">
+    <img src="../images/enemytank1.png" id="enemyTank">
+    <img id="bulletFlame" src="../images/fire.png" >  
+    <img id="EnmenyBulletFlame" src="../images/fire.png" >  
     <div class="bullet" id="playerBullet"></div>
     <div class="bullet" id="enemyBullet"></div>
-   <script src="play.js"></script> 
-   <script src="enemyplay.js"></script> 
+
+ 
 </div>
-<img id="begImg" >  
+
+<img id="begImg">
+<script src="../javascript/play.js"></script> 
+<script src="../javascript/enemyplay.js"></script> 
+
 </body>
 </html>
