damage detection & enemy accuracy
1- implement how to detect when the bullet hit the enemy or the player
2- now the accuracy of the enemy bullets depend on the level

--- a/Integrated version1/html/indexx.html
+++ b/Integrated version1/html/indexx.html
@@ -174,5 +174,6 @@
     <script src="../javascript/badgesfunc.js"></script>
     <script src="../javascript/play.js"></script>  
     <script src="../javascript/enemyplay.js"></script> 
+    <script src="../javascript/detection.js"></script> 
 </body>
 </html>
