after collision function for enemy
adding after collision function in new script

--- a/Integrated version1/html/indexx.html
+++ b/Integrated version1/html/indexx.html
@@ -154,6 +154,7 @@
                 <img src="../images/enemytank1.png" id="enemyTank">
                 <img id="bulletFlame" src="../images/fire.png" >  
                 <img id="EnmenyBulletFlame" src="../images/fire.png" >  
+                <img id="collisionFlame" src="../images/collision.png">
                 <div class="bullet" id="playerBullet"></div>
                 <div class="bullet" id="enemyBullet"></div>
             
