--- a/Integrated version1/html/indexx.html
+++ b/Integrated version1/html/indexx.html
@@ -177,5 +177,6 @@
     <script src="../javascript/detection.js"></script>
     <script type="text/javascript" src="../javascript/hitEffectPlayer.js"></script> 
     <script type="text/javascript" src="../javascript/hitEffectEnimy.js"></script>
+    <script type="text/javascript" src="gamesound.js"></script>
 </body>
 </html>
