actions after collision for the enemy

--- a/Integrated version1/html/indexx.html
+++ b/Integrated version1/html/indexx.html
@@ -154,7 +154,7 @@
                 <img src="../images/enemytank1.png" id="enemyTank">
                 <img id="bulletFlame" src="../images/fire.png" >  
                 <img id="EnmenyBulletFlame" src="../images/fire.png" >  
-                <img id="collisionFlame" src="../images/collision.png">
+                <img id="collisionFlame" src="../images/collision1.png">
                 <div class="bullet" id="playerBullet"></div>
                 <div class="bullet" id="enemyBullet"></div>
             
@@ -176,8 +176,9 @@
     <script src="../javascript/play.js"></script>  
     <script src="../javascript/enemyplay.js"></script> 
     <script src="../javascript/detection.js"></script>
-    <script type="text/javascript" src="../javascript/hitEffectPlayer.js"></script> 
-    <script type="text/javascript" src="../javascript/hitEffectEnimy.js"></script>
-    <script type="text/javascript" src="gamesound.js"></script>
+    <script src="../javascript/enemyAfterCollision.js"></script>
+    <!-- <script type="text/javascript" src="../javascript/hitEffectPlayer.js"></script>  -->
+    <!-- <script type="text/javascript" src="../javascript/hitEffectEnimy.js"></script> -->
+    <!-- <script type="text/javascript" src="gamesound.js"></script> -->
 </body>
 </html>
