--- a/Integrated version1/html/indexx.html
+++ b/Integrated version1/html/indexx.html
@@ -155,6 +155,7 @@
                 <img id="bulletFlame" src="../images/fire.png" >  
                 <img id="EnmenyBulletFlame" src="../images/fire.png" >  
                 <img id="collisionFlame" src="../images/collision.png">
+                <img id="collisionFlamePlayer" src="../images/blast.png">
                 <div class="bullet" id="playerBullet"></div>
                 <div class="bullet" id="enemyBullet"></div>
             
