--- a/version 2/html/indexx.html
+++ b/version 2/html/indexx.html
@@ -40,7 +40,8 @@
         <div id="creditsModal" class="creditsModal fade">
                 <div class="creditsDesc">
               <span id="closeCredits">&times;</span>
-                 <p id="creditsTxt">Developed by:<br> Aya Usama <br> Karim Sharabash <br> Kerolos Saad <br> Mariam Adel</p>
+                 <p id="creditsTxt">Developed by:<br> Aya Usama <br> Karim Sharabash <br> Kerolos Saad <br> Mariam Adel
+                </p>
                 </div>
                </div> 
                <img id="creditsImg" src="../images/creditsImage.png">
@@ -143,8 +144,10 @@
            <span id="closeHtp">&times;</span>
            <p id="htpTxt">you have an Enemy you must defet it , <br> 
             use the right and left arrows to control your tank ,<br>
-            use up and down arrows to control the curve of the bullet<br>
-            and finally try to win to gain some amazing badges ;) <br>  
+            use up and down arrows to control the curve of the bullet then shot with the space bar<br>
+            and finally try to win to gain some amazing badges ;)
+            
+            <br>  
         </p>
              </div>
            </div> 
